# ChangeLog for x11-libs/goffice
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.169 2015/03/15 13:33:35 pacho Exp $

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> goffice-0.10.21.ebuild:
  x86 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> goffice-0.10.21.ebuild:
  ppc64 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> goffice-0.10.21.ebuild:
  ppc stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> goffice-0.10.21.ebuild:
  amd64 stable, bug 534012

*goffice-0.10.21 (07 Mar 2015)

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> +goffice-0.10.21.ebuild,
  -goffice-0.10.19.ebuild:
  Version bump, drop old

*goffice-0.10.20 (06 Feb 2015)

  06 Feb 2015; Pacho Ramos <pacho@gentoo.org> +goffice-0.10.20.ebuild:
  Version bump

*goffice-0.10.19 (24 Jan 2015)

  24 Jan 2015; Pacho Ramos <pacho@gentoo.org> +goffice-0.10.19.ebuild,
  -goffice-0.10.17.ebuild:
  Version bump, drop old

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> goffice-0.10.18.ebuild:
  Stable for alpha, wrt bug #529964

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> goffice-0.10.18.ebuild:
  Stable for sparc, wrt bug #529964

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> goffice-0.10.18.ebuild:
  Stable for ia64, wrt bug #529964

  30 Dec 2014; Agostino Sarubbo <ago@gentoo.org> goffice-0.10.18.ebuild:
  Stable for ppc64, wrt bug #529964

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> goffice-0.10.18.ebuild:
  Stable for ppc, wrt bug #529964

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> goffice-0.10.18.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> goffice-0.10.18.ebuild:
  x86 stable, bug 529964

*goffice-0.10.18 (01 Oct 2014)

  01 Oct 2014; Pacho Ramos <pacho@gentoo.org> +goffice-0.10.18.ebuild,
  -goffice-0.10.14.ebuild, -goffice-0.10.16.ebuild:
  Version bump, drop old
