@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
-DEPEND=>=app-text/libspectre-0.2.6:= >=dev-libs/glib-2.38.0:2 dev-libs/libxslt >=gnome-base/librsvg-2.22:2 >=gnome-extra/libgsf-1.14.24:=[introspection?] >=dev-libs/libxml2-2.4.12:2 >=x11-libs/pango-1.24:= >=x11-libs/cairo-1.10:=[svg] x11-libs/libXext:= x11-libs/libXrender:= >=x11-libs/gdk-pixbuf-2.22:2 >=x11-libs/gtk+-3.8.7:3 introspection? ( >=dev-libs/gobject-introspection-1:= >=gnome-extra/libgsf-1.14.23:= ) >=dev-util/gtk-doc-am-1.12 >=dev-util/intltool-0.35 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
+DEPEND=>=app-text/libspectre-0.2.6:= >=dev-libs/glib-2.38.0:2 dev-libs/libxslt >=gnome-base/librsvg-2.22:2 >=gnome-extra/libgsf-1.14.24:=[introspection?] >=dev-libs/libxml2-2.4.12:2 >=x11-libs/pango-1.24:= >=x11-libs/cairo-1.10:=[svg] x11-libs/libXext:= x11-libs/libXrender:= >=x11-libs/gdk-pixbuf-2.22:2 >=x11-libs/gtk+-3.8.7:3 introspection? ( >=dev-libs/gobject-introspection-1:= >=gnome-extra/libgsf-1.14.23:= ) dev-lang/perl virtual/perl-Getopt-Long virtual/perl-IO-Compress virtual/perl-Compress-Raw-Zlib >=dev-util/gtk-doc-am-1.12 >=dev-util/intltool-0.35 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
 DESCRIPTION=A library of document-centric objects and utilities
 EAPI=5
 HOMEPAGE=http://git.gnome.org/browse/goffice/
@@ -10,4 +10,4 @@ RDEPEND=>=app-text/libspectre-0.2.6:= >=dev-libs/glib-2.38.0:2 dev-libs/libxslt 
 SLOT=0.10
 SRC_URI=mirror://gnome/sources/goffice/0.10/goffice-0.10.21.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	c77a2c791ae15742c3c796344e279142	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d44e2b01f7b91aeb3adbf4fe859089f9
+_md5_=81e61d82de9ac51d1d7ef9d06f6f1ab0
