@@ -7,15 +7,27 @@ DIST goffice-0.10.20.tar.xz 2330468 SHA256 75cad636c7cb586e7c8d4565fffb631afaf12
 DIST goffice-0.10.21.tar.xz 2336136 SHA256 be3cd0f31bb304369283fd13b441aa67705e62231db2001da191c49f724749c2 SHA512 e2363b84c9fac4a46860401e3bba3a92bc527bd0f40d593309788bd4a02bfe7cc55f49bb0587639435563b02e9729ee592069a4120482f2194eeb2c59512912f WHIRLPOOL f45ce739effe3df1f19f54f1673f0faba676b566c6677372c33a9df643422318e45463e9b85a5f9a944c7baeda4c228ba0aa8f40ff6d1a8d4c6d6ff064af0987
 DIST goffice-0.8.17.tar.xz 1814488 SHA256 165070beb67b84580afe80a8a100b674a81d553ab791acd72ac0c655f4fadb15 SHA512 61a3063d37e2ded4d4065d261f728c862daea04090ac38abe2524089ed1ee253e0d77e501f5b3451b1e011491a8225f90fd4914f28ce2a347ecf561098e6400c WHIRLPOOL 12ac2587af25c41686797b9bd5ff93429687217cb3d14e130067685701fd0685ed1c4f9900eb34a15cfb30dcdfe9ebe9f9856a1b4eb6684555d0a9cb1ef86ff1
 EBUILD goffice-0.10.18.ebuild 1334 SHA256 1d8ab38f83b47cff45bfb5b7d2ce43ad44468c9f3871888e36f9f2b7e14246f8 SHA512 f77bcbb4592c0388b5da6c6748a1af6bb3e588a08ebabfba44a3719de4df61cea2806e849a65a98b2d070b74ef4464e3f984eee3c50a5d6ffafe1c5a4e995dea WHIRLPOOL 1a61a80b430b0a69884fce2867c82365f0ee2e05ca49b534a99d618b247c7ade6295b7b56171d544b100c5f24f3e6c241aeb4892f5ff705b5a95eda3f131cb43
-EBUILD goffice-0.10.20.ebuild 1343 SHA256 a1cd07c678abfe8d522953555d1d171112f57a2c1f421eeeaf3b3d1d0325368d SHA512 44f5a82798f4989a19e1e0a522aa289979b41f91c6ac122340703f799712ae312e36a3809ae7c4cec008540fa3512cbb42d066c29540f0bff8feacd15639ce52 WHIRLPOOL 407fa52b8f712e62ce576fe0ee7ecebf004c2092c8393ae093472d080183aef70da654184913404fe9c4cc64487cbf611596587ecfaf8794cf30b5db6782ec4b
-EBUILD goffice-0.10.21.ebuild 1339 SHA256 3ce24ea470145e556dc5fe0468ddb8d3ebe1a3559fe8b0855b4aeb7cd65a3b05 SHA512 7e618e884ca3d1f93f7adf2d2ee304a82293a3615ce68220c9f9b7cd68896a01e2987d39dbbe8b3b5d55751331dc8abd2f29a373b9a376422807fa557b974a9a WHIRLPOOL 58ef6d55c61ffba8357e54bc17ede120e98cd257a93bc349f7b92b19c9b666ed8ce87a7b2921030f9f4f9e455dc8fe7e94c5d7c2a7db45add424744224816bd4
+EBUILD goffice-0.10.20.ebuild 1446 SHA256 06e3b9aae5e840dc62d0980e6c2a07bbb68cbaba6ed3bffd1dc8961a12716071 SHA512 ee28213a07d00276b232858d9f370aa4d4f6861996771f590862e0bfe321406d3b2c5e7e665a31286f6b8978800a8cf90b3adefd786c7828d40752058717ba71 WHIRLPOOL b4e16921885be679350756cfe02cfb88e710a7b104db3207264164606d45767c808304770ce495606db47de5375fa53b179f80367e1a08b410de990ce87b258d
+EBUILD goffice-0.10.21.ebuild 1442 SHA256 01d98c0f785ebc3ef1be79d05e8232c6be7a99c0aad26f0038007f019c5d5a50 SHA512 cbd5cbdafff155a56f1aaac986e889db2a0d1472fa8041032f3163a533e3495f2b0ca1aec706865d63d4cdaa4cc78997d544800c40ca435fb88cdc704c9b3fdb WHIRLPOOL 82b96069980f4e5e30ff55ffdb856b441148b3be3159be8bb42beed52e9122ee9ff5f6fa15c6fff23208f6dffbb3fd228126edaabd6c1a6910575c53938c4f80
 EBUILD goffice-0.8.17-r1.ebuild 1549 SHA256 35a6feffe6003aea2054466d08cb7ccffb40c1b80706d97c8c5172026e758462 SHA512 6a3ff3368b60427ec405a19cbde09cf37524c97fe7a71ff65ba9e7eb3cea09a31a24189bf30fbc6dd60883d25db4a5f54479b93f368a4cd83afc8985a9dc3913 WHIRLPOOL 7c968aebb95f37271e02adc397d8f98dceff0daf5b1bb0fd6b22b1ee55595c9e763e783816b305284581ea0ee753bccc183ee15554a7a3a59ad02d009ddecf0c
-MISC ChangeLog 22494 SHA256 47f16775cb837a20ca4f2f20705625c9b001916adb7bc060e5989b8269362146 SHA512 0aa01432b5efe2d6318a19e4b61c164807b002c9b222e86e95e0231d511cc8da178e369dfca9ec0c68e9083a858daac53bff5fdcbe58ed371ecb708afe5be857 WHIRLPOOL 0c47ed1f81ddf731f7a7a9eff424a4ee1b63da0b3cc3e5cf8949d6fab8a5a7fe4450a45fd802866a61f95433affb48eb5e928256daf910cf39f3b704ab4b0a40
+MISC ChangeLog 22677 SHA256 6d0e13cececaea8dc830ae20720f136a8f33b96474aaae57e8a37620bd5ebf0d SHA512 1f8a99bbe77d005c41a0eacd9e6a09fa402cc5c54853101885ea9e01b7c001f39505bd6699fb447a296ba4c82e0e5807bcef051758453972f117bbd445d8ece7 WHIRLPOOL 03e13d2ef2ef79a333f40af22f425bd59f060dc3f3d167bb6b221bf456549d0b42c11ea6ce29372584eab1e5a9afd78e780a37e5281e49271c5a526f426c3893
 MISC metadata.xml 355 SHA256 5eedbf049eb7d297420c9dc4f58b392f9a05405a9d755e75661157a45fb51962 SHA512 3d35480e156bde69be5c8b13e4fbc4ede877280dda5f6d0f28e3ca564e9c29919aa234b3a1986965714619b3daa286011d1af4d35dd7b3c696a6f85a4b88432a WHIRLPOOL 05578e14eb4c23bf265ad7456ac2f7c46fbb89672acbff9e4dbb25cc28cc9942caae9a2c63146a3850cda61bfb91036cc47b9ea985a3251a6e037112e44e4a5c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlUFiiEACgkQCaWpQKGI+9S8YgCfW2+Ee0f2skbJBh+/R1q1BBq+
-HQMAn0cJC7aPr2KkJm26sQ4pHUXbua4f
-=svCR
+iQJ8BAEBCABmBQJVEhyRXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
+OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNAL0QALiUi2HYrUPxCjLkMhC5HxYf
+8Mlr2RkSDMGrIHd6r0vwGsCB/5dEVMX0j4o/zFbQvUQ2r803ssPi9mSQUyFhjy0S
+SRfB5rwJJcYvZBfv4Zi1xj7aijUBzIOhr/eTXcmM7HLvDC68Nl5IwQ0GkS/WHtTZ
+bh03H0h/XASi6Drwl/r8iqaXC/Vs6xDLZMOEQLZygBIZ4Ds30V7hurWouig0FIjj
+YMeJ/wBNli33GcuPepHBwgF+XeBjZW6SlcuYyn4u8EQweQts4Ew0itpkfMVnQxfA
+GX/bDrtPoiOMEKfcsr+idnb4NALPrOHWBvwaYP5F1QVM5EaPS2bwcqdYqkAYKz+5
+mIrVvE7NPyU4xH+ZA4uI+ushLIvSrIFbWN8LTMF1kwTL0VNaxSDsLvdhXUmWVYVD
+uwXugd+QsVjDcg/jGRR2FQjPKuyyP9Bx0aPgAPjtPwoPhthvkY6KfYfYrv/bL7m4
+8HKQRLPr/BT+/UjwofSvMko2RwOB+KvEKVK9sOua+FpHfrS0GgpZRVFEdCwTKHKs
+KevcV6tgKq4TQIQCTo4pHY7CdJb76CXCdw7AELAY7stit6t4iJpgp54+JplRzNrK
+GmTWpSS0DiBDlmpfa/YhABB4G/W9/aHYzTs2TxaKVRsI8otWI3TP+TKMStWLNgOq
+K8bkzk+f7wsc1rsfgSD+
+=aF9g
 -----END PGP SIGNATURE-----
