@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/goffice
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.169 2015/03/15 13:33:35 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.170 2015/03/25 02:25:20 tetromino Exp $
+
+  25 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
+  goffice-0.10.20.ebuild, goffice-0.10.21.ebuild:
+  Add missing perl build deps (bug #543646, thanks to Kent Fredric).
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> goffice-0.10.21.ebuild:
   x86 stable, bug 534012
